feat: extract db analytics adapter
